News
====

.. contents::

1.5
---

* Fixed memory leak with ``paste.registry`` not properly removing
  all references to registered objects should register be called
  multiple times during a single context for a StackedObjectProxy.

* ``paste.httpheaders.CONTENT_RANGE`` returns ``bytes
  START-END/LENGTH`` instead of just ``START-END/LENGTH``

* In ``paste.fixture.TestApp`` set ``CONTENT_TYPE`` to
  ``'application/x-www-form-urlencoded'`` whenever there are
  parameters (and no other content type was provided).

* In ``paste.session``, when cleaning files ignore files that aren't
  session files.

* ``paste.httpexceptions.HTTPExceptionHandler`` will no longer catch
  exceptions raised during the app_iter iteration.

* ``paste.cascade.Cascade`` copies ``wsgi.input`` when cascading, so
  that one of the applications cannot read the input and leave a later
  application blocked when it tries to read the input.

* Fix assigning to ``WSGIResponse.charset`` breaking the content-type.

* SMTP authentication is supported for the exception handler.  You may
  now set ``smtp_username``, ``smtp_password`` and ``smtp_use_tls`` to
  control this behavior.  From pthy.

1.4.2
-----

* Remove FreeBSD threadpool condition in paste.httpserver (which was
  also breaking code for Windows users).

* Fix problem with ``paste.wsgilib.intercept_output`` and passing up
  exceptions.

1.4.1
-----

* Allow customization of the ``paste.config.ConfigMiddleware`` environ
  key.

* Added a ``current`` method (an alias of ``current_conf``) to
  ``paste.config.DispatchingConfig``.

* Make test response ``.form`` attribute work when you have a single
  named form.

* Try to encode any unicode input to ``paste.auth.auth_tkt``

* ``paste.wsgiwrappers.WSGIResponse`` now has a ``.content_type``
  attribute (that does not include parameters), and a ``.charset``
  attribute (that gets the charset parameter).

* Inherit inherit show_exceptions_in_wsgi_errors from global